fix: feed spacing

--- a/src/assets/styles/base/index.css
+++ b/src/assets/styles/base/index.css
@@ -281,7 +281,7 @@ h2 {
 }
 
 h3 {
-  font-size: var(--font-size-base);
+  font-size: var(--font-size-lg);
 }
 
 @media screen and (min-width: 768px) {
